[gd_scene load_steps=20 format=3 uid="uid://bdvlesf8o55gt"]

[ext_resource type="Script" path="res://Scenes/MainGame/MainGame.gd" id="1_da6hq"]
[ext_resource type="Texture2D" uid="uid://iyvudyyllskh" path="res://Assets/snake_sprites.png" id="2_pgy3u"]
[ext_resource type="PackedScene" uid="uid://ciay7recqr7w5" path="res://Scenes/Snake/snake.tscn" id="2_sgler"]
[ext_resource type="AudioStream" uid="uid://cf7xliqaskb4" path="res://Assets/SFX/Apple-Crunch.ogg" id="3_5ekrm"]
[ext_resource type="Texture2D" uid="uid://dyamplq8yaliw" path="res://Assets/apple.png" id="3_63u6q"]
[ext_resource type="PackedScene" uid="uid://utrpto5pwa7k" path="res://Scenes/Apple/apple.tscn" id="4_a2fua"]
[ext_resource type="AudioStream" uid="uid://b8nx6mtp6dk46" path="res://Assets/SFX/Apple Death.ogg" id="4_hgmin"]
[ext_resource type="AudioStream" uid="uid://dl3jqfwhrt1dg" path="res://Assets/SFX/Snake-Death.ogg" id="5_ux7mi"]
[ext_resource type="Texture2D" uid="uid://c2rqc5wyqpcmx" path="res://Assets/brick.png" id="5_xuyem"]
[ext_resource type="AudioStream" uid="uid://bvforr1pnsa1k" path="res://Assets/SFX/Snake Appears.ogg" id="6_nw5mh"]
[ext_resource type="PackedScene" uid="uid://cunwdnl2131qe" path="res://Scenes/InGameUI/InGameUI.tscn" id="7_a3lsh"]
[ext_resource type="AudioStream" uid="uid://bhuybhpunkh6j" path="res://Assets/SFX/Wall-Appears.ogg" id="7_kg568"]
[ext_resource type="AudioStream" uid="uid://c56h1gkmjljja" path="res://Assets/SFX/Five-Second-Countdown.ogg" id="8_er4x4"]
[ext_resource type="AudioStream" uid="uid://bed3wmassvnts" path="res://Assets/SFX/Button-Hover.ogg" id="14_sbbad"]
[ext_resource type="AudioStream" uid="uid://b85axobvufbnh" path="res://Assets/SFX/Button-Click.ogg" id="15_s4w0g"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y4g1a"]
resource_name = "Apple"
texture = ExtResource("3_63u6q")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vux8x"]
resource_name = "Snake"
texture = ExtResource("2_pgy3u")
margins = Vector2i(5, 5)
separation = Vector2i(5, 5)
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
0:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ucc6d"]
texture = ExtResource("5_xuyem")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_28s37"]
tile_size = Vector2i(40, 40)
sources/0 = SubResource("TileSetAtlasSource_y4g1a")
sources/1 = SubResource("TileSetAtlasSource_vux8x")
sources/2 = SubResource("TileSetAtlasSource_ucc6d")

[node name="MainGame" type="Node"]
script = ExtResource("1_da6hq")
snake_instance = ExtResource("2_sgler")
sfx_apple_eaten = ExtResource("3_5ekrm")
sfx_game_over = ExtResource("4_hgmin")
sfx_ouroboros = ExtResource("5_ux7mi")
sfx_snake_added = ExtResource("6_nw5mh")
sfx_wall_appears = ExtResource("7_kg568")
sfx_round_countdown = ExtResource("8_er4x4")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_28s37")
cell_quadrant_size = 40
format = 2
layer_0/name = "Walls"
layer_0/tile_data = PackedInt32Array(131072, 2, 0, 196608, 2, 0, 262144, 2, 0, 327680, 2, 0, 393216, 2, 0, 458752, 2, 0, 524288, 2, 0, 589824, 2, 0, 655360, 2, 0, 720896, 2, 0, 786432, 2, 0, 851968, 2, 0, 917504, 2, 0, 983040, 2, 0, 1048576, 2, 0, 1114112, 2, 0, 1114113, 2, 0, 1114114, 2, 0, 1114115, 2, 0, 1114116, 2, 0, 1114117, 2, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 2, 0, 1114121, 2, 0, 1114122, 2, 0, 1114123, 2, 0, 1114124, 2, 0, 1114125, 2, 0, 1114126, 2, 0, 1114127, 2, 0, 1114128, 2, 0, 1114129, 2, 0, 1114130, 2, 0, 1114131, 2, 0, 1114132, 2, 0, 1114133, 2, 0, 1114134, 2, 0, 1114135, 2, 0, 1114136, 2, 0, 1114137, 2, 0, 1114138, 2, 0, 1114139, 2, 0, 1114140, 2, 0, 1114141, 2, 0, 1114142, 2, 0, 131102, 2, 0, 131101, 2, 0, 131100, 2, 0, 131099, 2, 0, 131098, 2, 0, 131097, 2, 0, 131096, 2, 0, 131095, 2, 0, 131094, 2, 0, 131093, 2, 0, 131092, 2, 0, 131091, 2, 0, 131090, 2, 0, 131089, 2, 0, 131088, 2, 0, 131087, 2, 0, 131086, 2, 0, 131085, 2, 0, 131084, 2, 0, 131083, 2, 0, 131082, 2, 0, 131081, 2, 0, 131080, 2, 0, 131079, 2, 0, 131078, 2, 0, 131077, 2, 0, 131076, 2, 0, 131075, 2, 0, 131074, 2, 0, 131073, 2, 0, 131103, 2, 0, 196639, 2, 0, 262175, 2, 0, 327711, 2, 0, 393247, 2, 0, 458783, 2, 0, 524319, 2, 0, 589855, 2, 0, 655391, 2, 0, 720927, 2, 0, 786463, 2, 0, 851999, 2, 0, 917535, 2, 0, 983071, 2, 0, 1048607, 2, 0, 1114143, 2, 0)
layer_1/name = "PlayField"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="Apple" parent="." instance=ExtResource("4_a2fua")]
position = Vector2(5, 5)

[node name="Snakes" type="Node" parent="."]

[node name="Tick" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="RoundClock" type="Timer" parent="."]
wait_time = 45.0
autostart = true

[node name="InGameUI" parent="." instance=ExtResource("7_a3lsh")]
visible = false

[node name="BGM" type="AudioStreamPlayer" parent="."]

[node name="SFX" type="AudioStreamPlayer" parent="."]

[node name="HoverFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_sbbad")

[node name="ClickFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_s4w0g")

[connection signal="game_over" from="Apple" to="." method="_on_apple_game_over"]
[connection signal="timeout" from="Tick" to="." method="_on_tick_timeout"]
[connection signal="timeout" from="RoundClock" to="." method="_on_round_clock_timeout"]
[connection signal="main_menu" from="InGameUI" to="." method="go_to_main"]
[connection signal="play_click" from="InGameUI" to="." method="click_button"]
[connection signal="play_hover" from="InGameUI" to="." method="hover_button"]
[connection signal="restart" from="InGameUI" to="." method="start_new_game"]
